--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -9,10 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="static/styles.css">
 </head>
 
 <body>
-  <h1>hi</h1>
+  <h1>welcome to {{ app_name }} server index</h1>
 </body>
 
 </html>
